--- a/templates/Home.html
+++ b/templates/Home.html
@@ -10,20 +10,16 @@
     <div class="carousel-item active">
       <img src="{{ register_vaccine }}" class="d-block w-100" alt="First Slide">
       <div class="carousel-caption d-none d-md-block">
-        <h2>Be One of Us and Be Part of the New World</h2>
-        <p>Get your appointment now</p>
+        <h1 style = "font-family: 'Poppins', sans-serif;">Be One of Us and Be Part of the New World</h1>
+        <p style = "font-family: 'Poppins', sans-serif;">Get your appointment now</p>
         <p><a class="btn btn-lg btn-primary" href="{{ url_for('Register') }}">Sign up today</a></p>
       </div>
     </div>
     <div class="carousel-item">
       <img src="{{ what_are_covid_vaccines }}" class="d-block w-100" alt="Second Slide">
-      <div class="carousel-caption d-none d-md-block">
-      </div>
     </div>
      <div class="carousel-item">
       <img src="{{ get_vaccinated }}" class="d-block w-100" alt="Third Slide">
-      <div class="carousel-caption d-none d-md-block">
-      </div>
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
@@ -84,22 +80,22 @@
       <div class="col-lg-4">
         <img src="{{ vaccine_pic }}" width="240" height="240" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 240x240" preserveAspectRatio="xMidYMid slice" focusable="false" align="center">
         <h2 style="font-family: 'Nunito', sans-serif; font-weight: bold;">Pfizer BioNTech</h2>
-        <p><h6 >Dose and Frequency:</h6> 2 doses and 21 days apart</p>
-        <p><h6>Vaccine Efficacy:</h6> 95% against symptomatic COVID-19</p>
+        <p style = "font-family: 'Poppins', sans-serif;"><h6 style = "font-family: 'Poppins', sans-serif;">Dose and Frequency:</h6> 2 doses and 21 days apart</p>
+        <p style = "font-family: 'Poppins', sans-serif;"><h6 style = "font-family: 'Poppins', sans-serif;">Vaccine Efficacy:</h6> 95% against symptomatic COVID-19</p>
 
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
         <img src="{{ vaccine_pic }}" width="240" height="240" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 240x240" preserveAspectRatio="xMidYMid slice" focusable="false" align="center">
         <h2 style="font-family: 'Nunito', sans-serif; font-weight: bold;">Oxford AstraZeneca</h2>
-        <p><h6>Dose and Frequency:</h6> 2 doses and 4-12 weeks apart</p>
-        <p><h6>Vaccine Efficacy:</h6> 70.4% against symptomatic COVID-19; 100% against severe COVID-19</p>
+        <p style = "font-family: 'Poppins', sans-serif;"><h6 style = "font-family: 'Poppins', sans-serif;">Dose and Frequency:</h6> 2 doses and 4-12 weeks apart</p>
+        <p style = "font-family: 'Poppins', sans-serif;"><h6 style = "font-family: 'Poppins', sans-serif;">Vaccine Efficacy:</h6> 70.4% against symptomatic COVID-19; 100% against severe COVID-19</p>
       </div><!-- /.col-lg-4 -->
 
       <div class="col-lg-4">
         <img src="{{ vaccine_pic }}" width="240" height="240" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 240x240" preserveAspectRatio="xMidYMid slice" focusable="false" align="center">
         <h2 style="font-family: 'Nunito', sans-serif; font-weight: bold;">Sinovac CoronaVac</h2>
-        <p><h6>Dose and Frequency:</h6> 2 doses and 28 days apart</p>
-        <p><h6>Vaccine Efficacy:</h6> 65-91% (based on Brazil, Indonesia, and Turkey Trials)</p>
+        <p style = "font-family: 'Poppins', sans-serif;"><h6 style = "font-family: 'Poppins', sans-serif;">Dose and Frequency:</h6> 2 doses and 28 days apart</p>
+        <p style = "font-family: 'Poppins', sans-serif;"><h6 style = "font-family: 'Poppins', sans-serif;">Vaccine Efficacy:</h6> 65-91% (based on Brazil, Indonesia, and Turkey Trials)</p>
       </div><!-- /.col-lg-4 -->
     </div><!-- /.row -->
 
@@ -108,22 +104,22 @@
       <div class="col-lg-4">
         <img src="{{ vaccine_pic }}" width="240" height="240" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 240x240" preserveAspectRatio="xMidYMid slice" focusable="false" align="center">
         <h2 style="font-family: 'Nunito', sans-serif; font-weight: bold;">Gamaleya Sputnik V</h2>
-        <p><h6>Dose and Frequency:</h6> 2 doses and 21 days apart</p>
-        <p><h6>Vaccine Efficacy:</h6> 91.6% against symptomatic COVID-19; 100% against moderate or severe cases </p>
+        <p style = "font-family: 'Poppins', sans-serif;"><h6 style = "font-family: 'Poppins', sans-serif;">Dose and Frequency:</h6> 2 doses and 21 days apart</p>
+        <p style = "font-family: 'Poppins', sans-serif;"><h6 style = "font-family: 'Poppins', sans-serif;">Vaccine Efficacy:</h6> 91.6% against symptomatic COVID-19; 100% against moderate or severe cases </p>
 
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
         <img src="{{ vaccine_pic }}" width="240" height="240" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 240x240" preserveAspectRatio="xMidYMid slice" focusable="false" align="center">
         <h2 style="font-family: 'Nunito', sans-serif; font-weight: bold;">Bharat BioTech</h2>
-        <p><h6>Dose and Frequency:</h6> 2 doses and 14 days apart</p>
-        <p><h6>Vaccine Efficacy:</h6> 80.6% against PCR-confirmed symptomatic COVID-19 </p>
+        <p style = "font-family: 'Poppins', sans-serif;"><h6 style = "font-family: 'Poppins', sans-serif;">Dose and Frequency:</h6> 2 doses and 14 days apart</p>
+        <p style = "font-family: 'Poppins', sans-serif;"><h6 style = "font-family: 'Poppins', sans-serif;">Vaccine Efficacy:</h6> 80.6% against PCR-confirmed symptomatic COVID-19 </p>
       </div><!-- /.col-lg-4 -->
 
       <div class="col-lg-4">
         <img src="{{ vaccine_pic }}" width="240" height="240" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 240x240" preserveAspectRatio="xMidYMid slice" focusable="false" align="center">
         <h2 style="font-family: 'Nunito', sans-serif; font-weight: bold;">Moderna</h2>
-        <p><h6>Dose and Frequency:</h6> 2 doses and 28 days apart</p>
-        <p><h6>Vaccine Efficacy:</h6> 94.1% against symptomatic COVID-19; 100% against severe COVID-19 </p>
+        <p style = "font-family: 'Poppins', sans-serif;"><h6 style = "font-family: 'Poppins', sans-serif;">Dose and Frequency:</h6> 2 doses and 28 days apart</p>
+        <p style = "font-family: 'Poppins', sans-serif;"><h6 style = "font-family: 'Poppins', sans-serif;">Vaccine Efficacy:</h6> 94.1% against symptomatic COVID-19; 100% against severe COVID-19 </p>
       </div><!-- /.col-lg-4 -->
     </div><!-- /.row -->
 
@@ -132,15 +128,15 @@
       <div class="col-lg-4">
         <img src="{{ vaccine_pic }}" width="240" height="240" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 240x240" preserveAspectRatio="xMidYMid slice" focusable="false" align="center">
         <h2 style="font-family: 'Nunito', sans-serif; font-weight: bold;">Novavax</h2>
-        <p><h6>Dose and Frequency:</h6> 2 doses and 21 days apart</p>
-        <p><h6>Vaccine Efficacy:</h6> Awaiting Official Phase III Interim Journal Publication </p>
+        <p style = "font-family: 'Poppins', sans-serif;"><h6 style = "font-family: 'Poppins', sans-serif;">Dose and Frequency:</h6> 2 doses and 21 days apart</p>
+        <p style = "font-family: 'Poppins', sans-serif;"><h6 style = "font-family: 'Poppins', sans-serif;">Vaccine Efficacy:</h6> Awaiting Official Phase III Interim Journal Publication </p>
 
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
         <img src="{{ vaccine_pic }}" width="240" height="240" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 240x240" preserveAspectRatio="xMidYMid slice" focusable="false" align="center">
         <h2 style="font-family: 'Nunito', sans-serif; font-weight: bold;">Janssen</h2>
-        <p><h6>Dose and Frequency:</h6> 1 dose </p>
-        <p><h6>Vaccine Efficacy:</h6> 66.1-66.9% against confirmed moderate to severe/critical COVID-19 </p>
+        <p style = "font-family: 'Poppins', sans-serif;"><h6 style = "font-family: 'Poppins', sans-serif;">Dose and Frequency:</h6> 1 dose </p>
+        <p style = "font-family: 'Poppins', sans-serif;"><h6 style = "font-family: 'Poppins', sans-serif;">Vaccine Efficacy:</h6> 66.1-66.9% against confirmed moderate to severe/critical COVID-19 </p>
       </div><!-- /.col-lg-4 -->
 
     </div><!-- /.row -->
