--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="icon" href="https://healthypilipinas.ph/images/LOGO_BIDA_Plus_1.png" type="image/icon type">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
@@ -27,6 +33,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.min.js" integrity="sha512-Y2IiVZeaBwXG1wSV7f13plqlmFOx8MdjuHyYFVoYzhyRr3nH/NMDjTBSswijzADdNzMyWNetbLMfOpIPl6Cv9g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.css" integrity="sha512-Velp0ebMKjcd9RiCoaHhLXkR1sFoCCWXNp6w4zj1hfMifYB5441C+sKeBl/T/Ka6NjBiRfBBQRaQq65ekYz3UQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.js" integrity="sha512-YibiFIKqwi6sZFfPm5HNHQYemJwFbyyYHjrr3UT+VobMt/YBo1kBxgui5RWc4C3B4RJMYCdCAJkbXHt+irKfSA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.min.js"></script>
+    <script scr="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
@@ -67,6 +82,9 @@
     }
     body {
       background:#F8F8FF;
+    }
+    .carousel-caption {
+        background: rgba(0, 0, 0, 0.35);
     }
     </style>
     <meta charset="UTF-8">
@@ -150,24 +168,24 @@
       <div class="row py-3">
 
         <div class="col-lg-4 col-md-6 mb-lg-0">
-          <h6 class="text-uppercase font-weight-bold mb-4">About</h6>
-            <p class="text-muted mb-4" >The COVID-19 Vaccine Scheduling System will help you make an appointment at the
+          <h6 class="text-uppercase font-weight-bold mb-4" style = "font-family: 'Poppins', sans-serif;">About</h6>
+            <p class="text-muted mb-4" style = "font-family: 'Poppins', sans-serif;">The COVID-19 Vaccine Scheduling System will help you make an appointment at the
                     nearest vaccination centers with the availability of the vaccines and schedules on each site.</p>
         </div>
 
         <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">
-          <h6 class="text-uppercase font-weight-bold mb-4"align="center">Help</h6>
+          <h6 class="text-uppercase font-weight-bold mb-4"align="center" style = "font-family: 'Poppins', sans-serif;">Help</h6>
           <ul class="list-unstyled mb-0" align="center">
-            <li class="mb-2"><a href="{{ url_for('FAQs') }}" class="text-muted">Frequently Asked Questions</a></li>
+            <li class="mb-2"><a href="{{ url_for('FAQs') }}" class="text-muted" style = "font-family: 'Poppins', sans-serif;">Frequently Asked Questions</a></li>
           </ul>
         </div>
         <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">
-          <h6 class="text-uppercase font-weight-bold mb-4" align="center">Links</h6>
+          <h6 class="text-uppercase font-weight-bold mb-4" align="center" style = "font-family: 'Poppins', sans-serif;">Links</h6>
           <ul class="list-unstyled mb-0" align="center">
-            <li class="mb-2"><a href="{{ url_for('Login') }}" class="text-muted">Login</a></li>
-            <li class="mb-2"><a href="{{ url_for('Register') }}" class="text-muted">Register</a></li>
-            <li class="mb-2"><a href="{{ url_for('ScheduleAppointment') }}" class="text-muted">Schedule Appointment</a></li>
-            <li class="mb-2"><a href="{{ url_for('ViewAppointment') }}" class="text-muted">View Appointment</a></li>
+            <li class="mb-2"><a href="{{ url_for('Login') }}" class="text-muted" style = "font-family: 'Poppins', sans-serif;">Login</a></li>
+            <li class="mb-2"><a href="{{ url_for('Register') }}" class="text-muted" style = "font-family: 'Poppins', sans-serif;">Register</a></li>
+            <li class="mb-2"><a href="{{ url_for('ScheduleAppointment') }}" class="text-muted" style = "font-family: 'Poppins', sans-serif;">Schedule Appointment</a></li>
+            <li class="mb-2"><a href="{{ url_for('ViewAppointment') }}" class="text-muted" style = "font-family: 'Poppins', sans-serif;">View Appointment</a></li>
           </ul>
         </div>
         <div class="col-lg-4 col-md-6 mb-lg-0">
@@ -186,7 +204,7 @@
 
     <div class="bg-light py-2">
       <div class="container text-center">
-        <p class="text-muted mb-0 py-2">&copy; 2022 RESBAKUNA All rights reserved.</p>
+        <p class="text-muted mb-0 py-2" style = "font-family: 'Poppins', sans-serif;">&copy; 2022 RESBAKUNA All rights reserved.</p>
 
         </div>
       </div>
