--- a/templates/Home.html
+++ b/templates/Home.html
@@ -20,6 +20,11 @@
     </div>
      <div class="carousel-item">
       <img src="{{ get_vaccinated }}" class="d-block w-100" alt="Third Slide">
+      <div class="carousel-caption d-none d-md-block">
+        <h1 style = "font-family: 'Poppins', sans-serif;">Be One of Us and Be Part of the New World</h1>
+        <p style = "font-family: 'Poppins', sans-serif;">Already have an account?</p>
+        <p><a class="btn btn-lg btn-primary" href="{{ url_for('Login') }}">Sign In</a></p>
+      </div>
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
