--- a/templates/ScheduleAppointment.html
+++ b/templates/ScheduleAppointment.html
@@ -9,6 +9,7 @@
           $("#available_vaccines").empty();
           $("#expected_date").empty();
           $("#hospitaladdress").empty();
+          $("#vac_type").empty();
 
           var current_hospital_name = nearest;
           $('#hospitalname').val(current_hospital_name);
@@ -18,6 +19,7 @@
           var hospital_address = hospital_data[current_hospital_name][0];
           var available_vaccines = hospital_data[current_hospital_name][1];
           var expected_dates = hospital_data[current_hospital_name][2];
+          var vac_types = hospital_data[current_hospital_name][3];
 
           var address = document.getElementById('hospitaladdress');
           address.value = hospital_data[current_hospital_name][0];
@@ -36,6 +38,13 @@
             }));
           };
 
+          for (const type of vac_types){
+            $("#vac_type").append($("<option/>", {
+              "value": type,
+              "text": type
+            }));
+          };
+
         }
 
         window.onload = clearvalues;
@@ -44,6 +53,7 @@
         $("#available_vaccines").empty();
         $("#expected_date").empty();
         $("#hospitaladdress").empty();
+        $("#vac_type").empty();
 
         var current_hospital_name = selectObject.value;
 
@@ -52,7 +62,7 @@
         var hospital_address = hospital_data[current_hospital_name][0];
         var available_vaccines = hospital_data[current_hospital_name][1];
         var expected_dates = hospital_data[current_hospital_name][2];
-
+        var vac_types = hospital_data[current_hospital_name][3];
         var address = document.getElementById('hospitaladdress');
         address.value = hospital_data[current_hospital_name][0];
 
@@ -69,13 +79,23 @@
             "text": date
           }));
         };
+
+        for (const type of vac_types){
+          $("#vac_type").append($("<option/>", {
+            "value": type,
+            "text": type
+          }));
+        };
         }
+
+        
 </script>
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin="" />
 {% extends "base.html" %}
 {% block title %}Schedule Appointment{% endblock %}
 {% block content %}
-  <h3 class="text-center mb-4 pb-2 text-success fw-bold" style = "font-family: 'Poppins', sans-serif;">SCHEDULE YOUR APPOINTMENT HERE</h3>
+<br>
+  <h1 class="text-center mb-4 pb-2 text-success fw-bold" style = "font-family: 'Poppins', sans-serif;">SCHEDULE YOUR APPOINTMENT HERE</h3>
 <form method="POST" id="appointment-details">
   {{ form.hidden_tag() }}
   <div class="form-row mt-3">
@@ -132,6 +152,11 @@
                       <h6 class="card-text" style = "font-family: 'Poppins', sans-serif;">Expected Date of Vaccination:</h6>
                       <div class="form-group">
                         {{ form.vaccineschedule(class="form-select", placeholder="Expected Date of Vaccination", id="expected_date") }}
+                      </div>
+
+                      <h6 class="card-text" style = "font-family: 'Poppins', sans-serif;">Type of Vaccination:</h6>
+                      <div class="form-group">
+                        {{ form.vaccinetype(class="form-select", placeholder="Type of Vaccination", id="vac_type") }}
                       </div>
 
                       <div class="d-grid gap-2 my-2">
