--- a/templates/base.html
+++ b/templates/base.html
@@ -177,6 +177,7 @@
           <h6 class="text-uppercase font-weight-bold mb-4"align="center" style = "font-family: 'Poppins', sans-serif;">Help</h6>
           <ul class="list-unstyled mb-0" align="center">
             <li class="mb-2"><a href="{{ url_for('FAQs') }}" class="text-muted" style = "font-family: 'Poppins', sans-serif;">Frequently Asked Questions</a></li>
+              <li class="mb-2"><a href="{{ url_for('Steps') }}" class="text-muted" style = "font-family: 'Poppins', sans-serif;">Detailed Steps</a></li>
           </ul>
         </div>
         <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">
